[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/TitleScreen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/dynamic_fonts/m5x7_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/gui/perro_viejo_logo.png" type="Texture" id=4]
[ext_resource path="res://assets/resources/dynamic_fonts/m5x7_16.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.278431, 0.176471, 0.235294, 0 )

[sub_resource type="StyleBoxEmpty" id=4]
content_margin_bottom = 6.0

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
use_mipmaps = true
font_data = SubResource( 5 )

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_top = 2.0
content_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=8]
size = 12
use_mipmaps = true
extra_spacing_top = -1
extra_spacing_bottom = -3
font_data = SubResource( 5 )

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Credits:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Credits:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 180 ) ]
}

[node name="MainMenu" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 160.218 ]
}

[node name="BG" type="Panel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 4
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxMain" type="VBoxContainer" parent="BG/MarginContainer"]
margin_left = 16.0
margin_top = 4.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_vertical = 3

[node name="NameContainer" type="VBoxContainer" parent="BG/MarginContainer/VBoxMain"]
margin_left = 134.0
margin_right = 288.0
margin_bottom = 78.0
size_flags_horizontal = 8
size_flags_vertical = 3
custom_constants/separation = -2

[node name="GameName" type="Label" parent="BG/MarginContainer/VBoxMain/NameContainer"]
margin_right = 154.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.235294, 0.67451, 0.843137, 1 )
text = "Game Template"
align = 2

[node name="Version" type="Label" parent="BG/MarginContainer/VBoxMain/NameContainer"]
margin_top = 24.0
margin_right = 154.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.956863, 0.705882, 0.105882, 1 )
text = "Game Template"
align = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="BG/MarginContainer/VBoxMain"]
margin_top = 82.0
margin_right = 288.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="BG/MarginContainer/VBoxMain/ButtonsContainer"]
margin_top = 28.0
margin_right = 52.0
margin_bottom = 78.0
size_flags_vertical = 8
custom_constants/separation = 2

[node name="NewGame" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" groups=[
"FocusGroup",
"MainMenu",
] instance=ExtResource( 3 )]
margin_right = 52.0
margin_bottom = 11.0
focus_neighbour_top = NodePath("../Exit")
focus_previous = NodePath("../Exit")
size_flags_horizontal = 0
text = "Nuevo juego"
align = 0

[node name="Options" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 13.0
margin_bottom = 24.0
size_flags_horizontal = 0
text = "Opciones"
align = 0

[node name="CreditsBtn" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 26.0
margin_right = 35.0
margin_bottom = 37.0
size_flags_horizontal = 0
text = "Créditos"
align = 0

[node name="Exit" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 39.0
margin_right = 18.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../NewGame")
focus_next = NodePath("../NewGame")
size_flags_horizontal = 0
text = "Salir"
align = 0

[node name="Credits" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 180.0
margin_bottom = 180.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsContainer" type="VBoxContainer" parent="BG/Credits"]
margin_left = 16.0
margin_top = 8.0
margin_right = 304.0
margin_bottom = 172.0

[node name="Logo" type="TextureRect" parent="BG/Credits/CreditsContainer"]
margin_left = 241.0
margin_right = 288.0
margin_bottom = 15.0
size_flags_horizontal = 8
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="BG/Credits/CreditsContainer"]
margin_top = 19.0
margin_right = 288.0
margin_bottom = 35.0
size_flags_horizontal = 5
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Perro Viejo [games]"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Devs" type="Label" parent="BG/Credits/CreditsContainer"]
margin_top = 39.0
margin_right = 288.0
margin_bottom = 139.0
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.235294, 0.67451, 0.843137, 1 )
text = "Itzel \"Noisy Panda\" González Estrada
Sound effects | Efectos de sonido

Juan \"Quiet Gecko\" Carlos García Ángel
Música | Music

José Miguel Romero 
Programación | Programming

Mateo \"Carenalga\" Robayo Rodríguez
Programación | Programming"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="BG/Credits/CreditsContainer" instance=ExtResource( 3 )]
margin_top = 148.0
margin_right = 18.0
margin_bottom = 159.0
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Back"
align = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/credits_exit = SubResource( 9 )
anims/show_credits = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
